[DROOLS-7433] Cleanup of tests in decisiontables (#5220)